--- a/week2/html-list.html
+++ b/week2/html-list.html
@@ -6,14 +6,14 @@
 </head>
 <body>
         <ol>
-        <li>List Item 1
+        <li style="list-style-type: upper-roman;">List Item 1
             <ul>
                 <li style="list-style-type: lower-alpha;">Sub Item 1.1</li>
                 <li style="list-style-type: lower-alpha;">Sub Item 1.2</li>
             </ul>
         </li>
 
-        <li>List Item 2
+        <li style="list-style-type: upper-roman;"> List Item 2
             <ul>
                 <li style="list-style-type: decimal;">Sub Item 2.1</li>
                 <li style="list-style-type: decimal;">Sub Item 2.2</li>
@@ -26,7 +26,7 @@
             </ul>
         </li>
 
-        <li>List Item 3
+        <li style="list-style-type: upper-roman;">List Item 3
             <ul>
                 <li style="list-style-type: disc;">Sub Item 3.1</li>
                 <li style="list-style-type: disc;">Sub Item 3.2</li>
